--- a/examples/react-app-with-rendering-tools/src/avatar/avatarLayout.module.scss
+++ b/examples/react-app-with-rendering-tools/src/avatar/avatarLayout.module.scss
@@ -12,6 +12,7 @@
   flex-wrap: wrap;
   height: 100%;
   justify-content: center;
+  justify-items: center;
   position: relative;
   width: 100%;
 }
